@@ -1,9 +1,10 @@
 0.0.21a0
-======
+=======
 
 * Added a method to get the latest S3 object in a bucket given a prefix
 * Changed the build method from setup.py to pypa - python3 -m build
 * Added method list_deployment_runs for listing runs in the user context
+* Added logging for the openssl decrypt method
 
 0.0.20
 ======
